manifests/pt-launch/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pt-launch
  namespace: xinfa
  labels:
    app: pt-launch
    tier: frontend
spec:
  selector:
    matchLabels:
      app: pt-launch
      tier: frontend
  template:
    metadata:
      labels:
        app: pt-launch
        tier: frontend
    spec:
      containers:
        - name: pt-launch
          image: git.caspen-tech.com:5050/jolly88-complex/frontend:pt-launch-1686716083 # {"$imagepolicy": "xinfa:pt-launch"}
          ports:
            - containerPort: 80
          imagePullPolicy: Always
          resources:
            requests:
              memory: 128Mi
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - pt-launch
              topologyKey: kubernetes.io/hostname
      imagePullSecrets:
        - name: gitlab-registry
