manifests/pt-launch/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pt-launch
  namespace: xinfa
  labels:
    app: pt-launch
    tier: frontend
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: pt-launch
    tier: frontend
