manifests/pt-launch/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pt-launch
  namespace: xinfa
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  tls:
    - hosts:
        - game.tljkrpry2.com
      secretName: pt-launch
  rules:
  - host: game.tljkrpry2.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pt-launch
            port:
              number: 80
